--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,7 +8,7 @@
     <string name="enter">commit</string>
     <string name="error_hex_chars">only numbers and chars from A to F</string>
     <string name="error_number_6">Hexcode must have 6 characters</string>
-    <string name="error_number_between">the number must be between 0 and 255</string>
+    <string name="error_number_between">the number have to be between 0 and 255</string>
     <string name="gallery">gallery</string>
     <string name="hex_code">Hex-code</string>
     <string name="instructions_gallery_m">tap on the gallery-icon to select an image from the gallery and select a color from it.</string>
@@ -30,4 +30,13 @@
     <string name="share_app">recommend app</string>
     <string name="share_m">Recommend ColorConverter to your friends!</string>
     <string name="rate">Rate</string>
+    <string name="shortcut_disabled">action disabled</string>
+    <string name="shortcut_gallery_long">choose color of image from gallery</string>
+    <string name="shortcut_gallery_short">image from gallery</string>
+    <string name="shortcut_photo_long">choose color of photo</string>
+    <string name="shortcut_photo_short">take photo</string>
+    <string name="image_broken">This image is broken</string>
+    <string name="select_photo_text">Select an image</string>
+    <string name="done">Done</string>
+    <string name="all_photos">All Photos</string>
 </resources>
