--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -39,4 +39,21 @@
     <string name="image_broken">Cette image est cassée</string>
     <string name="select_photo_text">Sélectionnez une image</string>
     <string name="done">Terminé</string>
+    <string name="choose_name">coisir nom</string>
+    <string name="delete">effacer</string>
+    <string name="delete_m">Voulez vous vraiment effacer cette couleur?</string>
+    <string name="download_img">Télécharcher image</string>
+    <string name="enter_web_url">entrer web url</string>
+    <string name="image_from_web">image de l\'internet</string>
+    <string name="instructions_web_m">touchez le web-icon pour télécharger une image de l\'internet et choisiz une couleur de cette image.</string>
+    <string name="malformed_url">défectueuse url</string>
+    <string name="no_colors_saved_yet">Pas des couleurs sauvent jusqu\'ici! Pour sauver une  couleur , touchez le save-icon à gauche dans le couleur-avant-première.</string>
+    <string name="no_internet_available">Pas d\'internet disponible.</string>
+    <string name="pick_random_color">Générer couleur au hasard</string>
+    <string name="rename">rebaptiser</string>
+    <string name="save">sauver</string>
+    <string name="save_color">sauver couleur</string>
+    <string name="selected">sélectionné</string>
+    <string name="title_activity_color_selection">couleurs, qui sont sauvent</string>
+    <string name="press_color_to_apply">Pulse en color para aplicar</string>
 </resources>
