--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,10 @@
     <!-- Common strings -->
     <string name="app_name" translatable="false">Color Converter</string>
     <string name="title_image">Choose From Image Feature</string>
-    <string name="next">Next</string>
     <string name="close">close</string>
-    <string name="error" translatable="false">ERROR</string>
     <string name="ok">OK</string>
+    <string name="error" translatable="false">ERROR</string>
     <string name="cancel">Cancel</string>
-    <string name="no_internet_available">No internet available</string>
     <string name="r" translatable="false">R</string>
     <string name="g" translatable="false">G</string>
     <string name="b" translatable="false">B</string>
@@ -16,31 +14,16 @@
     <string name="v" translatable="false">V</string>
 
     <!-- MainActivity -->
-    <string name="title_activity_main" translatable="false">@string/app_name</string>
     <string name="hex_code">HEX code</string>
-    <string name="convert">Convert</string>
     <string name="selection_">Selection:</string>
-    <string name="converting_">Convert:</string>
     <string name="choose_color">Choose color</string>
     <string name="save_color">Save color</string>
     <string name="save">Save</string>
     <string name="choose_name">Choose name</string>
     <string name="pick_random_color">Generate random color</string>
     <string name="pick_color_from_image">Choose color from image</string>
-    <string name="rgb_to_hex" translatable="false">RGB > HEX</string>
-    <string name="hex_to_rgb" translatable="false">HEX > RGB</string>
-    <string name="rgb_to_hsv" translatable="false">RGB > HSV</string>
-    <string name="hex_to_hsv" translatable="false">HEX > HSV</string>
-    <string name="hsv_to_rgb" translatable="false">HSV > RGB</string>
-    <string name="hsv_to_hex" translatable="false">HSV > HEX</string>
-    <string name="error_number_between">The number have to be between 0 and 255</string>
-    <string name="error_number_6">Hex code must have 6 characters</string>
-    <string name="error_hex_chars">Only numbers and chars from A to F</string>
-    <string name="enter">Commit</string>
     <string name="copied_to_clipboard">Copied to clipboard</string>
-    <string name="gallery">Gallery</string>
-    <string name="capture_image">Capture image</string>
-    <string name="image_from_web">Web image</string>
+    <string name="new_iamge">Choose new image</string>
     <string name="rate_app">Rate app</string>
     <string name="rate_m">Rate Color Converter in Google PlayStore with 5 stars, if you are enjoying the app!</string>
     <string name="share_app">Recommend app</string>
@@ -58,7 +41,6 @@
     <string name="hsv_">HSV: %1$s, %2$s, %3$s</string>
 
     <!-- ColorSelectionAcitivity -->
-    <string name="title_activity_color_selection">Saved colors</string>
     <string name="delete">Delete</string>
     <string name="delete_m">Do you really want to delete the color named \'%s\'?</string>
     <string name="rename">Rename</string>
@@ -68,8 +50,6 @@
 
     <!-- Image Chooser -->
     <string name="done">Done</string>
-    <string name="all_photos">All Photos</string>
-    <string name="select_photo_text">Select an image</string>
 
     <!-- Shortcuts -->
     <string name="shortcut_disabled">Action disabled</string>
@@ -80,7 +60,7 @@
 
     <!-- InstantApp -->
     <string name="install_app">Install app</string>
-    <string name="instant_install_m">This feature is not supported in instant app version. Please install the app to use this feature.</string>
+    <string name="instant_install_m">This feature is not supported in the instant app version. Please install the app to use this feature.</string>
     <string name="install_app_download">Install this app to enjoy all the features and also the features we cannot support in the instant app version.</string>
     <string name="instant_installed_t">App installed</string>
     <string name="instant_installed_m">Thank you for installing our app. Tap on OK to continue.</string>
