--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ Copyright © 2019 Marc Auberer. All rights reserved.
   -->
 
-<resources>
+<!--
+ Loco xml export: Android string resources
+ Project: Color Converter
+ Release: Working copy
+ Locale: en, English
+ Exported by: M&R Games
+ Exported at: Sun, 01 Dec 2019 22:52:56 +0100
+-->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Common strings -->
-    <string name="app_name" translatable="false">Color Converter</string>
     <string name="title_image">Feature for color choosing from images</string>
     <string name="close">close</string>
     <string name="ok">OK</string>
-    <string name="error" translatable="false">ERROR</string>
     <string name="cancel">Cancel</string>
-    <string name="r" translatable="false">R</string>
-    <string name="g" translatable="false">G</string>
-    <string name="b" translatable="false">B</string>
-    <string name="h" translatable="false">H</string>
-    <string name="s" translatable="false">S</string>
-    <string name="v" translatable="false">V</string>
-
     <!-- MainActivity -->
     <string name="hex_code">HEX code</string>
     <string name="selection_">Selection:</string>
@@ -39,31 +39,24 @@
     <string name="color_name">Name</string>
     <string name="rgb_code">RGB code</string>
     <string name="hsv_code">HSV code</string>
+    <!-- %s is a placeholder -->
     <string name="name_">Name: %s</string>
-    <string name="rgb_" translatable="false">RGB: %1$s, %2$s, %3$s</string>
-    <string name="hex_" translatable="false">HEX: %s</string>
-    <string name="hsv_" translatable="false">HSV: %1$s, %2$s, %3$s</string>
-
     <!-- ColorSelectionActivity -->
     <string name="delete">Delete</string>
+    <!-- %s is a placeholder -->
     <string name="delete_m">Do you really want to delete the color \'%s\'?</string>
     <string name="rename">Rename</string>
     <string name="selected">Selected</string>
-    <string name="color_summary" translatable="false">RGB: %1$s, %2$s, %3$s • HEX: %4$s • HSV: %5$s, %6$s, %7$s</string>
     <string name="no_colors_saved">No colors saved!\nTo save a color, tap on the save-icon on the left side in the color preview.</string>
-
     <!-- Image Chooser -->
     <string name="done">Done</string>
-
     <!-- Shortcuts -->
     <string name="shortcut_disabled">Action disabled</string>
     <string name="shortcut_photo_long">Choose color of photo</string>
-
     <!-- InstantApp -->
     <string name="install_app">Install app</string>
     <string name="instant_install_m">This feature is not supported in the instant app version. Please install the app to use this feature.</string>
     <string name="install_app_download">Install this app to enjoy all the features and also the features we cannot support in the instant app version.</string>
     <string name="instant_installed_t">App installed</string>
     <string name="instant_installed_m">Thank you for installing our app. Tap on OK to continue.</string>
-
 </resources>
