--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: fr, French
  Exported by: M&R Games
- Exported at: Tue, 03 Dec 2019 21:38:26 +0100
+ Exported at: Sun, 08 Dec 2019 16:47:18 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Common strings -->
@@ -59,4 +59,6 @@
     <string name="install_app_download">Installez cette application pour profiter de toutes les fonctionnalités et des fonctionnalités que nous ne pouvons pas prendre en charge dans la version de l\'application instantanée.</string>
     <string name="instant_installed_t">Application installée</string>
     <string name="instant_installed_m">Merci d\'avoir installé notre application. Appuyez sur OK pour continuer.</string>
+    <string name="module_installation_failed"></string>
+    <string name="approve_permissions"></string>
 </resources>
