--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
+  ~ Copyright © Marc Auberer 2020. All rights reserved
+  -->
+
+<!--
  Loco xml export: Android string resources
  Project: Color Converter
  Release: Working copy
  Locale: de, German
- Exported by: M&R Games
- Exported at: Fri, 27 Dec 2019 20:40:20 +0000
+ Exported by: ChilliBits
+ Exported at: Mon, 13 Jan 2020 21:52:44 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -27,7 +31,7 @@
     <string name="share_app">App weiterempfehlen</string>
     <string name="share">Weiterempfehlen</string>
     <string name="share_m">Emfehlen Sie Color Converter an Ihre Freunde!</string>
-    <string name="recommend_string">Color Converter: Farben konvertieren, Farben aus Bildern wählen und vieles mehr! Ein einfaches Werkzeug für Programmierer und Grafikdesigner. Von Google Play herunterladen: https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter</string>
+    <string name="recommend_string">Color Converter: Farben konvertieren, Farben aus Bildern wählen und vieles mehr! Ein einfaches Werkzeug für Programmierer und Grafikdesigner. Von Google Play herunterladen: https://play.google.com/store/apps/details?id=com.chillibits.colorconverter</string>
     <string name="press_color_to_apply">Auf Farbe tippen zum Bestätigen</string>
     <string name="rate">Bewerten</string>
     <string name="color_name">Name</string>
