--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
  Project: Color Converter
  Release: Working copy
  Locale: en, English
- Exported by: M&R Games
- Exported at: Fri, 27 Dec 2019 20:40:19 +0000
+ Exported by: ChilliBits
+ Exported at: Wed, 22 Jan 2020 15:45:47 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">close</string>
