--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Mon, 13 Jan 2020 21:52:44 +0000
+ Exported at: Wed, 22 Jan 2020 15:45:47 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -31,7 +31,7 @@
     <string name="share_app">App weiterempfehlen</string>
     <string name="share">Weiterempfehlen</string>
     <string name="share_m">Emfehlen Sie Color Converter an Ihre Freunde!</string>
-    <string name="recommend_string">Color Converter: Farben konvertieren, Farben aus Bildern wählen und vieles mehr! Ein einfaches Werkzeug für Programmierer und Grafikdesigner. Von Google Play herunterladen: https://play.google.com/store/apps/details?id=com.chillibits.colorconverter</string>
+    <string name="recommend_string">Color Converter: Farben konvertieren, Farben aus Bildern wählen und vieles mehr! Ein einfaches Werkzeug für Programmierer und Grafikdesigner. Von Google Play herunterladen: https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter</string>
     <string name="press_color_to_apply">Auf Farbe tippen zum Bestätigen</string>
     <string name="rate">Bewerten</string>
     <string name="color_name">Name</string>
