--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: es, Spanish
  Exported by: ChilliBits
- Exported at: Mon, 13 Jan 2020 21:52:45 +0000
+ Exported at: Wed, 22 Jan 2020 15:45:48 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">cerrar</string>
@@ -31,7 +31,7 @@
     <string name="share_app">Recommendar la applicatión</string>
     <string name="share">Recommendar</string>
     <string name="share_m">Recomienda Color Converter a tus amigos!</string>
-    <string name="recommend_string">Color Converter: Convertir colores, leer los colores de las imágenes y mucho más! Una herramienta eficaz para los programadores y diseñadores. Descargar desde Google Play: https://play.google.com/store/apps/details?id=com.chillibits.colorconverter</string>
+    <string name="recommend_string">Color Converter: Convertir colores, leer los colores de las imágenes y mucho más! Una herramienta eficaz para los programadores y diseñadores. Descargar desde Google Play: https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter</string>
     <string name="press_color_to_apply">Toque el color para aplicar</string>
     <string name="rate">Evaluar</string>
     <string name="color_name">Nombre</string>
