--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Mon, 13 Jan 2020 21:52:44 +0000
+ Exported at: Wed, 22 Jan 2020 15:45:47 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">close</string>
@@ -31,7 +31,7 @@
     <string name="share_app">Recommend app</string>
     <string name="share">Recommend</string>
     <string name="share_m">Recommend Color Converter to your friends!</string>
-    <string name="recommend_string">Color Converter: Converting colors, picking colors from an image and much more! An lightweight tool for programmers and designers. Download from Google Play: https://play.google.com/store/apps/details?id=com.chillibits.colorconverter</string>
+    <string name="recommend_string">Color Converter: Converting colors, picking colors from an image and much more! An lightweight tool for programmers and designers. Download from Google Play: https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter</string>
     <string name="press_color_to_apply">Tap on color to apply</string>
     <string name="rate">Rate</string>
     <string name="color_name">Name</string>
