--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Wed, 22 Jan 2020 15:45:47 +0000
+ Exported at: Sat, 25 Jan 2020 12:56:42 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -59,4 +59,7 @@
     <string name="instant_installed_m">Vielen Dank dass Sie unsere App installiert haben. Tippen Sie auf OK um fortzufahren.</string>
     <string name="approve_permissions">Diese Berechtigungen werden benötigt, damit dieses Feature funktioniert.</string>
     <string name="message_to_drag_up">Für Galerie Bilder hochwischen</string>
+    <string name="speak_color">Farbe sprechen</string>
+    <string name="language_not_available">Sprache nicht verfügbar</string>
+    <string name="initialization_failed">Initialisierung fehlgeschlagen</string>
 </resources>
