--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Sat, 25 Jan 2020 12:56:42 +0000
+ Exported at: Sat, 25 Jan 2020 13:30:53 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">schließen</string>
@@ -62,4 +62,5 @@
     <string name="speak_color">Farbe sprechen</string>
     <string name="language_not_available">Sprache nicht verfügbar</string>
     <string name="initialization_failed">Initialisierung fehlgeschlagen</string>
+    <string name="audio_muted">Bitte Lautstärke erhöhen</string>
 </resources>
