--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: fr, French
  Exported by: ChilliBits
- Exported at: Sat, 25 Jan 2020 12:56:41 +0000
+ Exported at: Sat, 25 Jan 2020 13:30:53 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">fermer</string>
@@ -62,4 +62,5 @@
     <string name="speak_color"></string>
     <string name="language_not_available"></string>
     <string name="initialization_failed"></string>
+    <string name="audio_muted"></string>
 </resources>
