--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
+  ~ Copyright © Marc Auberer 2020. All rights reserved
+  -->
+
+<!--
  Loco xml export: Android string resources
  Project: Color Converter
  Release: Working copy
  Locale: en, English
  Exported by: ChilliBits
- Exported at: Fri, 31 Jan 2020 11:59:33 +0000
+ Exported at: Tue, 03 Mar 2020 15:23:47 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="close">close</string>
